--- a/templates/header.html
+++ b/templates/header.html
@@ -95,13 +95,13 @@
                 >Login</a
               >
             </li>
-            <!--<li class="nav-item">
+            <li class="nav-item">
               <a
                 class="nav-link px-lg-3 py-3 py-lg-4"
                 href="{{ url_for('register') }}"
                 >Register</a
               >
-            </li>-->
+            </li>
             {% else: %}
             <li class="nav-item">
               <a
